<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_main"
    android:paddingLeft="@dimen/activity_horizontal_main"
    android:paddingRight="@dimen/activity_horizontal_main"
    android:paddingTop="@dimen/activity_vertical_main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="makadown.com.restservice.LoginRegisterActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    
        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                    <EditText
                                        android:id="@+id/email"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/prompt_email"
                                        android:inputType="textEmailAddress"
                                        android:maxLines="1"
                                        android:singleLine="true"/>
                             </android.support.design.widget.TextInputLayout>
                             <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                    <EditText
                                            android:id="@+id/password"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/prompt_password"
                                            android:imeActionId="@+id/login"
                                            android:imeActionLabel="@string/action_sign_in"
                                            android:imeOptions="actionUnspecified"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:singleLine="true"/>
                             </android.support.design.widget.TextInputLayout>

            
                         <Button
                                android:id="@+id/email_sign_in_button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/action_sign_in"
                                android:textStyle="bold"
                                android:onClick="attemptLoginRegister"
                                />

                         <Button
                                 android:id="@+id/register_button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/action_register"
                                android:textStyle="bold"
                                android:onClick="attemptLoginRegister"
                            />

                </LinearLayout>

        </ScrollView>

</LinearLayout>
